# SemenovaK

./: CMakeLists.txt  first.cpp  my_foo1.cpp  my_foo1.hpp  tests.cpp
Laba2/: CMakeLists.txt  five.cpp  five.hpp  main.cpp  test.cpp
lab3/: CMakeLists.txt  figure.hpp  main.cpp  point.cpp  point.hpp  rectangle.cpp  rectangle.hpp  rhomb.cpp  rhomb.hpp  tests.cpp  trapezoid.cpp  trapezoid.hpp  vector.cpp  vector.hpp
lab4/: CMakeLists.txt  figure.hpp  main.cpp  point.hpp  rectangle.hpp  rhomb.hpp  tests.cpp  trapezoid.hpp  vector.hpp
lab5/: CMakeLists.txt  allocator.h  allocator1.h  forward_list.h  main.cpp  tests.cpp
lab6/: CMakeLists.txt  druids.cpp  fighting.hpp  main.cpp  npc.cpp  npc.hpp  orc.hpp  squirrel.cpp  squirrel.hpp  tests.cpp
lab7/: CMakeLists.txt  druids.hpp  main.cpp  npc.cpp  npc.hpp  orc.cpp  tests.cpp
